# pycryptopals

./: .gitignore  main.py  pyproject.toml
files/: 11.txt  12.txt
lib/aes/: __init__.py
lib/bytes/: __init__.py
lib/chisquare/: __init__.py
lib/chisquare/extended/: __init__.py
lib/consts/: __init__.py
lib/data/: __init__.py
lib/data/extended/: __init__.py
lib/xor/: __init__.py
set01/: __init__.py  challenge01.py  challenge02.py  challenge03.py  challenge04.py  challenge05.py  challenge06.py  challenge07.py  challenge08.py  main.py  pyproject.toml
set01/lib/: __init__.py  chisquare.py  consts.py
set01/tests/: test_lib.py
set02/: __init__.py  challenge09.py  challenge10.py  challenge11.py  challenge12.py  main.py  pyproject.toml  test_lib.py
set02/lib/: __init__.py
set02/tests/: test_lib.py
tests/lib/: test_aes.py  test_bytes.py  test_chisquare.py  test_data.py  test_extendedchisquare.py  test_xor.py
