[tool.poetry]
name = "set01"
version = "0.1.0"
description = "Cryptopals set 01"
authors = ["Ricardo Carvalho <rat.carvalho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
